--- a/multimodel.ipynb
+++ b/multimodel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,16 +20,59 @@
     "\n",
     "# Load the model from the pickle file\n",
     "with open('model.pkl', 'rb') as model_file:\n",
-    "    model = pickle.load(model_file)"
+    "    model = pickle.load(model_file)\n",
+    "\n",
+    "with open('weather.pkl', 'rb') as model_file:\n",
+    "    weat_her = pickle.load(model_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lower_limit = 0\n",
+    "upper_limit = 5\n",
+    "while True:\n",
+    "    try:\n",
+    "        # Take user input and convert it to an integer\n",
+    "        weather = float(input(f\"Enter a number between {lower_limit} and {upper_limit}: \"))\n",
+    "        \n",
+    "        # Check if the input is within the specified range\n",
+    "        if lower_limit <= weather <= upper_limit:\n",
+    "            break  # Break out of the loop if the input is valid\n",
+    "        else:\n",
+    "            print(f\"Please enter a number within the specified range ({lower_limit} - {upper_limit}).\")\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input. Please enter a valid number.\")\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        # Take user input and convert it to an integer\n",
+    "        trip_hour = float(input(f\"Enter a number between {lower_limit} and {upper_limit}: \"))\n",
+    "        \n",
+    "        # Check if the input is within the specified range\n",
+    "        if 1 <= trip_hour <= 24:\n",
+    "            break  # Break out of the loop if the input is valid\n",
+    "        else:\n",
+    "            print(f\"Please enter a number within the specified range ({lower_limit} - {upper_limit}).\")\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input. Please enter a valid number.\")\n",
+    "voltage = float(input(\"Line Voltage of Phase A\\t\"))\n",
+    "\n",
+    "weather_pred=np.array([float(weather),float(voltage),float(trip_hour)])\n",
+    "preds=weat_her.predict(weather_pred)\n",
+    "print(preds)"
    ]
   },
   {
